// Specialist Service ERD
// Service: specialist-service
// Database: specialist_db
// Người 1 (phần còn lại)

// API Examples:
// GET /specialists/{id}
//   - Response: { "specialist_id": "uuid", "specialization": "transcription", "experience_years": 5 }
//
// GET /specialists?skill=piano
//   - Response: [{ "specialist_id": "uuid", "skill_name": "piano", "proficiency_level": "expert" }]
//
// Events: specialist.created|updated, demo.published

Table specialists {
  specialist_id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [unique, not null, note: 'Soft reference to identity-service.users_auth']
  full_name_snapshot varchar(255)
  email_snapshot varchar(255)
  specialization specialist_type [not null]
  status specialist_status [default: 'active']
  experience_years integer [default: 0]
  max_concurrent_tasks integer [default: 5]
  portfolio_url varchar(255)
  bio text
  rating decimal(3,2) [default: 0.00]
  total_projects integer [default: 0]
  
  // RECORDING ARTIST SPECIFIC FIELDS
  avatar_url varchar(500)
  gender gender_type
  recording_roles recording_role[] [note: 'Array for RECORDING_ARTIST']
  genres text[] [note: 'Array of music genres']
  credits text[] [note: 'Array of credits']
  reviews integer [default: 0, note: 'Number of reviews (separate from total_projects)']
  hourly_rate decimal(12,2) [default: 0, note: 'Hourly rate for recording artists (VND/hour)']
  
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  created_by varchar(255)
  updated_by varchar(255)
  
  Note: '[SPECIALIST SERVICE] Specialist profiles - Extends BaseEntity'
  
  indexes {
    user_id [unique]
    specialization
    status
    gender
  }
}

Table skills {
  skill_id uuid [pk, default: `gen_random_uuid()`]
  skill_name varchar(100) [unique, not null]
  skill_type skill_type [not null]
  recording_category recording_category [note: 'Optional - chỉ có giá trị khi skill_type = RECORDING_ARTIST']
  description text
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  created_by varchar(255)
  updated_by varchar(255)
  
  Note: '[SPECIALIST SERVICE] Skills catalog - Extends BaseEntity'
  
  indexes {
    skill_name [unique]
    is_active
    skill_type
    recording_category
  }
}

Table specialist_skills {
  specialist_skill_id uuid [pk, default: `gen_random_uuid()`]
  specialist_id uuid [ref: > specialists.specialist_id, not null]
  skill_id uuid [ref: > skills.skill_id, not null]
  proficiency_level proficiency_level [not null]
  years_experience integer [default: 0]
  last_used_date date
  is_certified boolean [default: false]
  certification_details text
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  Note: 'Kỹ năng của specialist với level và kinh nghiệm cụ thể'
  
  indexes {
    (specialist_id, skill_id) [unique]
    specialist_id
    skill_id
    proficiency_level
    years_experience
  }
}

Table artist_demos {
  demo_id uuid [pk, default: `gen_random_uuid()`]
  specialist_id uuid [ref: > specialists.specialist_id, not null]
  title varchar(150)
  description text
  recording_role recording_role [not null, note: 'VOCALIST hoặc INSTRUMENT_PLAYER (bắt buộc)']
  skill_id uuid [ref: > skills.skill_id, note: 'Optional for VOCALIST, required for INSTRUMENT_PLAYER']
  genres text[] [not null, note: 'Array of genres - bắt buộc, ít nhất 1 genre']
  preview_url varchar(500) [not null, note: 'Public S3 URL - customer có thể xem/nghe trực tiếp']
  is_public boolean [default: false, note: 'Specialist tự chọn public/private']
  is_main_demo boolean [default: false, note: 'Demo chính - được hiển thị ở avatar trong trang list specialists']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  created_by varchar(255)
  updated_by varchar(255)
  
  Note: '[SPECIALIST SERVICE] Artist demos - 1:N với specialists, N:1 với skills (optional). Extends BaseEntity.'
  
  indexes {
    specialist_id
    is_public
    skill_id
    genres
    recording_role
  }
}

Table outbox_events {
  event_id uuid [pk, default: `gen_random_uuid()`]
  aggregate_id uuid [not null]
  aggregate_type text [not null]
  event_type text [not null]
  event_payload jsonb [not null]
  occurred_at timestamptz [not null, default: `now()`]
  published_at timestamptz
  retry_count integer [not null, default: 0]
  last_error text
  next_retry_at timestamptz
  trace_id text
  correlation_id text
  
  Note: 'Event publishing'
  
  indexes {
    aggregate_id
    aggregate_type
    event_type
    occurred_at
    (next_retry_at)
  }
}

Table consumed_events {
  event_id uuid [not null]
  consumer_name text [not null]
  processed_at timestamptz [not null, default: `now()`]
  
  Note: 'Idempotency - PK(event_id, consumer_name), INSERT ... ON CONFLICT DO NOTHING'
  
  indexes {
    (event_id, consumer_name) [unique, pk]
    consumer_name
    processed_at
  }
}

// Enums
Enum specialist_type {
  transcription_specialist
  arrangement_specialist
  recording_artist
}

Enum specialist_status {
  active
  inactive
  suspended
}

Enum skill_type {
  transcription
  arrangement
  recording_artist
}

Enum recording_category {
  vocal
  instrument
}

Enum proficiency_level {
  beginner
  intermediate
  advanced
  expert
}

Enum recording_role {
  vocalist
  instrument_player
}

Enum gender_type {
  male
  female
  other
}